# research-evaluator-agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  conf.yaml.sample  docker-compose.yml  entrypoint.sh  env.sample  langgraph.json  main.py  pyproject.toml
src/examples/cli/: article-agent.txt  intent.txt  main.py
src/examples/langgraph_example/: robot.txt
src/research_evaluator_agent/: cli.py  langgraph.json  workflow.py
src/research_evaluator_agent/agents/: agents.py  master.py
src/research_evaluator_agent/agents/graph/: builder.py  types.py
src/research_evaluator_agent/agents/graph/nodes/: __init__.py  combiner.py  interpreter.py  metric_evaluator.py
src/research_evaluator_agent/api/: __init__.py
src/research_evaluator_agent/cli/: __init__.py  main.py
src/research_evaluator_agent/config/: agents.py  metrics.py
src/research_evaluator_agent/llms/: __init__.py  factory.py
src/research_evaluator_agent/models/: schemas.py
src/research_evaluator_agent/prompts/: breadth.md  combiner.md  custom_metric.md  depth.md  factuality.md  interpreter.md  novelty.md  relevance.md  template.py  vars.py
src/research_evaluator_agent/server/: __init__.py  app.py  run_server.py
src/research_evaluator_agent/utils/: file.py  json_utils.py  logging.py  scoring.py
tests/: test_apply_template.py  test_graph_builder.py  test_graph_types.py  test_llm_factory.py  test_master_agent.py  test_metric_configuration.py  test_scoring.py  test_templates_render.py
