[project]
name = "research-evaluator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "langgraph>=0.1.0",
    "pydantic>=1.10",
    "typer[all]>=0.9.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "jinja2>=3.1",
    "structlog>=23.1",
    "openai>=0.27",
    "langchain-openai>=0.3.23",
    "langgraph-cli>=0.3.3",
    "json-repair>=0.46.2",
    "tenacity>=9.1.2",
]
